--- a/sst2_dataset.ipynb
+++ b/sst2_dataset.ipynb
@@ -51,7 +51,7 @@
       "source": [
         "from huggingface_hub import login\n",
         "\n",
-        "login(token=\"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\")"
+        "login(token=\"<My Token ID(Hided)>")"
       ],
       "metadata": {
         "_uuid": "a4395d99-1742-4fee-b558-81adddc93f4b",
