--- a/SQuAD_dataset.ipynb
+++ b/SQuAD_dataset.ipynb
@@ -47,7 +47,7 @@
       "cell_type": "code",
       "source": [
         "from huggingface_hub import login\n",
-        "login(token=\"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\")"
+        "login(token=\"<My Token ID>\")"
       ],
       "metadata": {
         "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
